[FIX] Toolbar cut off when code block height smaller than its height
BETA-293 [FIXES NEEDED -> DONE]

--- a/BaCa2/assets/scss/_code_block.scss
+++ b/BaCa2/assets/scss/_code_block.scss
@@ -22,6 +22,7 @@ pre.code-block {
 }
 
 .code-toolbar {
+    overflow: hidden;
     position: relative;
 
     &:hover .toolbar {
