--- a/BaCa2/assets/static/css/base.css
+++ b/BaCa2/assets/static/css/base.css
@@ -1306,6 +1306,7 @@ pre.code-block.line-numbers-hidden .line-numbers-rows {
 }
 
 .code-toolbar {
+  overflow: hidden;
   position: relative;
 }
 .code-toolbar:hover .toolbar {
